--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,155 @@
 body{
     font-family: 'Inter', sans-serif;
+    font-size: 14px;
+    margin: 0 5%;
+    display: grid;
+    grid-template-columns: repeat(4, 25%);
+    grid-template-rows: repeat(7, auto);
+    color: hsl(228,34%,66%);
 }
+
+header{
+  grid-column: 1 / 4;
+  grid-row: 1 / 2; 
+}
+
+h2{
+  font-size: 1.642857143em;/*23px*/
+  margin: 3% 0 1%;
+  color: black;
+}
+
+h3{
+  grid-column: 1 / 5;
+  grid-row: 4 / 5;
+  font-size: 1.6429em;/*23 px*/
+}
+
+h4{
+  margin: 0;
+  font-size: 0.785714286em;
+}
+
+img{
+  margin-right: 10px;
+}
+
+p{
+  text-transform: uppercase;
+  font-size: 0.7857em;
+  letter-spacing: 4px;
+}
+
+.optionSwitch{
+  grid-column: 4 / 5;
+  grid-row: 1 / 2;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  font-weight: 700;
+}
+
+.mainCard{
+  margin: 10%;
+  padding: 5%;
+  text-align: center;
+  border-radius: 5px;
+  background-color: hsl(227,47%,96%);/*Light Grayish Blue*/
+}
+
+.mainCard:hover{
+  background-color: #e1e3f0;
+}
+
+.mainNumber{
+  font-size: 3em;
+  font-weight: 700;
+  margin: 10% 0;
+  color: black;
+}
+ 
+.socialTitle{
+   display: flex;
+   align-items: center;
+   justify-content: center;
+   font-size: 0.928571429em;/*13px*/
+}
+
+.status{
+  color: hsl(163,72%,41%); /*Lime Green*/
+  font-size: 0.857142857em; /*12px*/
+  font-weight: 700;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.redStatus{
+  color: hsl(356,69%,56%); /*Bright Red*/
+}
+
+.smallCard{
+  margin: 10%;
+  padding: 10%;
+  text-align: center;
+  border-radius: 5px;
+  background-color: hsl(227,47%,96%);/*Light Grayish Blue*/
+}
+
+.smallCard:hover{
+  background-color: hsl(230,22%,74%);
+}
+
+.scLine1, .scLine2{
+  display: flex;
+  justify-content: space-between;
+}
+
+.scLine1{
+  margin-bottom: 10%;
+}
+
+.scLine1 img{
+  margin-right: 0;
+}
+
+.todayNumber{
+  font-size: 1.7857em;/*25 px*/
+  font-weight: 700;
+}
+
+#mainFacebookCard{
+  grid-column: 1 / 2;
+  grid-row: 2 / 4;
+  border-top: 5px solid hsl(208, 92%, 53%);
+}
+
+#mainTwitterCard{
+  grid-column: 2 / 3;
+  grid-row: 2 / 4;
+  border-top: 5px solid hsl(203, 89%, 53%);
+}
+
+#mainInstagramCard{
+  grid-column: 3 / 4;
+  grid-row: 2 / 4;
+  border-top: 5px solid transparent;
+  border-radius: 5px;
+  border-image: linear-gradient(to right,hsl(37,97%,70%) , hsl(329,70%,58%)) 1 ;
+}
+
+#mainYouTubeCard{
+  grid-column: 4 / 5;
+  grid-row: 2 / 4;
+  border-top: 5px solid hsl(348, 97%, 39%);
+}
+
 
 /* Pie  de página */
 .attribution {
     font-size: 11px;
     text-align: center;
+    grid-column: 1 / 5;
 }
     
 .attribution a {
@@ -19,63 +163,69 @@ body{
 .switch {
     position: relative;
     display: inline-block;
-    width: 60px;
-    height: 34px;
+    width: 57px;
+    height: 28px;
+    margin-left: 10%;
   }
   
-  /* Hide default HTML checkbox */
-  .switch input {
-    opacity: 0;
-    width: 0;
-    height: 0;
-  }
+/* Hide default HTML checkbox */
+.switch input {
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
   
-  /* The slider */
-  .slider {
-    position: absolute;
-    cursor: pointer;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    /* background-color:red; */
-    background-image: linear-gradient(to right,hsl(210,78%,56%) , hsl(146,68%,55%));
-    -webkit-transition: .4s;
-    transition: .4s;
-  }
-  
-  .slider:before {
-    position: absolute;
-    content: "";
-    height: 26px;
-    width: 26px;
-    left: 4px;
-    bottom: 4px;
-    background-color: white;
-    -webkit-transition: .4s;
-    transition: .4s;
-  }
-  
-  input:checked + .slider {
-    background-image: linear-gradient(to right,hsl(230,22%,74%) ,hsl(230,22%,74%));
-  }
-  
-  input:focus + .slider {
-    box-shadow: 0 0 1px #2196F3;
-  }
-  
-  input:checked + .slider:before {
-    -webkit-transform: translateX(26px);
-    -ms-transform: translateX(26px);
-    transform: translateX(26px);
-  }
-  
-  /* Rounded sliders */
-  .slider.round {
-    border-radius: 34px;
-  }
-  
-  .slider.round:before {
-    border-radius: 50%;
-  }
+/* The slider */
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  /* background-color:red; */
+  background-image: linear-gradient(to right,hsl(210,78%,56%) , hsl(146,68%,55%));
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 20px;
+  width: 20px;
+  left: 6px;
+  bottom: 4px;
+  background-color: white;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+input:checked + .slider {
+  background-image: linear-gradient(to right,hsl(230,22%,74%) ,hsl(230,22%,74%));
+}
+
+input:checked + .slider:hover{
+  background-image: linear-gradient(to right,hsl(210,78%,56%) , hsl(146,68%,55%));  
+}
+
+input:focus + .slider {
+  box-shadow: 0 0 0px #2196F3;
+}
+
+input:checked + .slider:before {
+  -webkit-transform: translateX(26px);
+  -ms-transform: translateX(26px);
+  transform: translateX(26px);
+}
+
+/* Rounded sliders */
+.slider.round {
+  border-radius: 34px;
+}
+
+.slider.round:before {
+  border-radius: 50%;
+}
+
 
