--- a/css/style.css
+++ b/css/style.css
@@ -88,16 +88,21 @@ p{
   color: hsl(356,69%,56%); /*Bright Red*/
 }
 
+.subscriber{
+  font-weight: 700;
+}
+
 .smallCard{
   margin: 10%;
   padding: 10%;
   text-align: center;
   border-radius: 5px;
   background-color: hsl(227,47%,96%);/*Light Grayish Blue*/
+  color: black;
 }
 
 .smallCard:hover{
-  background-color: hsl(230,22%,74%);
+  background-color: #e1e3f0;
 }
 
 .scLine1, .scLine2{
