--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,29 @@
 body{
-    font-family: 'Inter', sans-serif;
-    font-size: 14px;
-    margin: 0 5%;
-    display: grid;
-    grid-template-columns: repeat(4, 25%);
-    grid-template-rows: repeat(7, auto);
-    color: hsl(228,34%,66%);
+  font-family: 'Inter', sans-serif;
+  font-size: 14px;
+  padding: 1% 5% 0;
+  color: hsl(228,12%,44%); /*Dark Grayish Blue*/
+  background-color: hsl(0,0%,100%);/*White*/
+}
+
+.topBG{
+  background-color: hsl(225,100%,98%);/*Very Pale Blue*/
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -1;
+  width: 100%;
+  height: 25%;
+  border-radius: 0 0 15px 15px;
+}
+
+.myGrid{
+  display: grid;
+  grid-template-columns: repeat(4, 22%);
+  grid-template-rows: repeat(7, auto);
+  max-width: 1500px;
+  column-gap: 3%;
+  row-gap: 3%;
 }
 
 header{
@@ -16,7 +34,7 @@ header{
 h2{
   font-size: 1.642857143em;/*23px*/
   margin: 3% 0 1%;
-  color: black;
+  color: hsl(230, 17%, 14%);/*Very Dark Blue*/
 }
 
 h3{
@@ -27,7 +45,7 @@ h3{
 
 h4{
   margin: 0;
-  font-size: 0.785714286em;
+  font-size: 1em;
 }
 
 img{
@@ -50,7 +68,6 @@ p{
 }
 
 .mainCard{
-  margin: 10%;
   padding: 5%;
   text-align: center;
   border-radius: 5px;
@@ -65,7 +82,7 @@ p{
   font-size: 3em;
   font-weight: 700;
   margin: 10% 0;
-  color: black;
+  color: hsl(230, 17%, 14%);/*Very Dark Blue*/
 }
  
 .socialTitle{
@@ -93,12 +110,11 @@ p{
 }
 
 .smallCard{
-  margin: 10%;
   padding: 10%;
   text-align: center;
   border-radius: 5px;
   background-color: hsl(227,47%,96%);/*Light Grayish Blue*/
-  color: black;
+  font-weight: 700;
 }
 
 .smallCard:hover{
@@ -121,6 +137,7 @@ p{
 .todayNumber{
   font-size: 1.7857em;/*25 px*/
   font-weight: 700;
+  color: hsl(230, 17%, 14%);/*Very Dark Blue*/
 }
 
 #mainFacebookCard{
@@ -138,9 +155,9 @@ p{
 #mainInstagramCard{
   grid-column: 3 / 4;
   grid-row: 2 / 4;
-  border-top: 5px solid transparent;
   border-radius: 5px;
   border-image: linear-gradient(to right,hsl(37,97%,70%) , hsl(329,70%,58%)) 1 ;
+  border-top: 5px solid transparent;
 }
 
 #mainYouTubeCard{
@@ -233,4 +250,158 @@ input:checked + .slider:before {
   border-radius: 50%;
 }
 
+/* ------------------------------------------------------ 
+---------------- Media Queries --------------------------
+---------------------------------------------------------*/
+/*768px*/
+@media(max-width: 768px){
+  
+  body{
+    padding-top: 5%;
+  }
+
+  .topBG{
+    height: 33%;
+  }
+
+  .myGrid{
+    grid-template-columns: repeat(2, 50%);
+    grid-template-rows: repeat(7, auto);
+  }
+
+  header{
+    grid-column: 1 / 2;
+  }
+
+  h3, .attribution{
+    grid-column: 1 / 3;
+  }
+  .optionSwitch{
+    grid-column: 2 / 3;
+  }
+
+  #mainFacebookCard{
+    grid-column: 1 / 2;
+    grid-row: 2 / 3;
+  }
+
+  #mainTwitterCard{
+    grid-column: 2 / 3;
+    grid-row: 2 / 3;
+  }
+
+  #mainInstagramCard{
+    grid-column: 1 / 2;
+    grid-row: 3 / 4;
+  }
+
+  #mainYouTubeCard{
+    grid-column: 2 / 3;
+    grid-row: 3 / 4;
+  }
+}
+
+/*576px*/
+@media(max-width: 576px){
+  
+  body{
+    font-size: 14px;
+    padding: 5% 7%;
+  }
+
+  .topBG{
+    height: 40%;
+  }
+
+  .myGrid{
+    grid-template-columns: 100%;
+    grid-template-rows: auto;
+    column-gap: 0;
+    row-gap: 0;
+  }
+
+  header{
+    grid-column: 1 / 2;
+    padding: 0 0 5%;
+  }
+
+  h3{
+    grid-column: 1 / 2;
+    grid-row: 7 / 8;
+  }
+
+  .attribution{
+    grid-column: 1 / 2;
+    font-size: 10px;
+  }
+
+  .optionSwitch{
+    grid-column: 1 / 2;
+    grid-row: 2 / 3;
+    border-top: 2px solid hsl(230,22%,74%);
+    padding: 5% 0 0;
+    justify-content: space-between;
+  }
+
+  .mainCard, .smallCard{
+    margin: 5% 0;
+  }
+
+
+  #mainFacebookCard{
+    grid-column: 1 / 2;
+    grid-row: 3 / 4;
+  }
+
+  #mainTwitterCard{
+    grid-column: 1 / 2;
+    grid-row: 4 / 5;
+  }
+
+  #mainInstagramCard{
+    grid-column: 1 / 2;
+    grid-row: 5 / 6;
+  }
+
+  #mainYouTubeCard{
+    grid-column: 1 / 2;
+    grid-row: 6 / 7;
+  }
+}
+
+/* ------------------------------------------------------ 
+---------------- Dark Mode Classes-----------------------
+---------------------------------------------------------*/
+.darkModeColor{
+  color: hsl(228,34%,66%);/*Desaturated Blue*/
+}
+
+.darkModeMainText{
+  color: hsl(0,0%,100%);/*White*/
+}
+
+.darkModeBGCard{
+  background-color: hsl(228,28%,20%); /*Dark Desaturated Blue*/
+}
+
+.darkModeBGCard:hover{
+  background-color: #333a56;
+}
+
+.darkModeBG{
+  background-color: hsl(230,17%,14%); /*Very Dark Blue*/
+}
+
+.darkModeTopBG{
+  background-color: hsl(232,19%,15%);/*Very Dark Blue 2*/
+}
+
+.darkModeAttributionLink{
+  color: yellow;
+  text-decoration: none;
+}
+
+.darkModeAttributionLink:link{
+  color: yellow;
+}
 
